--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,19 @@
 
 
 body {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Orbitron', sans-serif;
 
 }
 
 #clock {    
     display:block;
+    max-width: 400px;
     background-color: #121212;
     color: #fffb28;
     font-size: 56px;
     text-align: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    max-width: 400px;
+    padding: 40px 20px;
+    margin: 8px;
+    
+   
 }
