--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,33 @@
 
 body {
     font-family: 'Orbitron', sans-serif;
-
+    color: #fffb28;
 }
 
 #clock {    
     display:block;
-    max-width: 400px;
+    max-width: 300px;
     background-color: #121212;
-    color: #fffb28;
-    font-size: 56px;
+    margin: 8px;   
+}
+
+#monthDay{
+    text-align: left;
+    font-size: 20px;
+    padding: 10px 15px 0;
+    margin: 0;
+}
+
+#hours {
+    font-size: 60px;
     text-align: center;
-    padding: 40px 20px;
-    margin: 8px;
-    
-   
+    padding: 0;
+    margin: 0;
+}
+
+#year {
+    text-align: right;
+    font-size: 20px;
+    padding: 0 15px 10px;
+    margin: 0;
 }
