--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,9 @@ body {
 
 #clock {    
     display:block;
-    max-width: 300px;
+    max-width: 350px;
     background-color: #121212;
-    margin: 8px;   
+    margin: 8px; 
 }
 
 #monthDay{
@@ -22,7 +22,7 @@ body {
 #hours {
     font-size: 60px;
     text-align: center;
-    padding: 0;
+    padding: 0 10px;
     margin: 0;
 }
 
